# Pendulum-Visualiser

./: CMakeLists.txt  README.md  new.cpp
include/: Shader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragment.glsl
src/: Shader.cpp  main.cpp
